--- a/addons/resource.language.en_gb/resources/strings.po
+++ b/addons/resource.language.en_gb/resources/strings.po
@@ -24169,7 +24169,27 @@ msgctxt "#39201"
 msgid "HDR10+"
 msgstr ""
 
-#empty strings from id 39202 to 39999
+#: xbmc/dialogs/GUIDialogSubtitles.cpp
+msgctxt "#39202"
+msgid "Subtitle frame rate correction"
+msgstr ""
+
+#: xbmc/dialogs/GUIDialogSubtitles.cpp
+msgctxt "#39203"
+msgid "None"
+msgstr ""
+
+#: xbmc/dialogs/GUIDialogSubtitles.cpp
+msgctxt "#39204"
+msgid "24 to 25 fps"
+msgstr ""
+
+#: xbmc/dialogs/GUIDialogSubtitles.cpp
+msgctxt "#39205"
+msgid "25 to 24 fps"
+msgstr ""
+
+#empty strings from id 39206 to 39999
 
 # 40000 to 40800 are reserved for Video Versions feature
 
