--- a/addons/resource.language.en_gb/resources/strings.po
+++ b/addons/resource.language.en_gb/resources/strings.po
@@ -23735,6 +23735,27 @@ msgctxt "#39197"
 msgid "If enabled, Dolby Vision profile 7 will be converted to profile 8.1, which is more commonly supported by devices. Enable if your device supports Dolby Vision, but has issues with some videos."
 msgstr ""
 
+#: xbmc/dialogs/GUIDialogSubtitles.cpp
+msgctxt "#39198"
+msgid "Subtitle frame rate correction"
+msgstr ""
+
+#: xbmc/dialogs/GUIDialogSubtitles.cpp
+msgctxt "#39199"
+msgid "None"
+msgstr ""
+
+#: xbmc/dialogs/GUIDialogSubtitles.cpp
+msgctxt "#39200"
+msgid "24 to 25 fps"
+msgstr ""
+
+#: xbmc/dialogs/GUIDialogSubtitles.cpp
+msgctxt "#39201"
+msgid "25 to 24 fps"
+msgstr ""
+
+
 # 40000 to 40800 are reserved for Video Versions feature
 
 #. Generic video versions label (plural)
