Implement subtitle 24/25fps frame rate correction
Time-stretch subtitle pts to sync 24fps subtitles with 25fps mastered
video and vice versa.

--- a/addons/resource.language.en_gb/resources/strings.po
+++ b/addons/resource.language.en_gb/resources/strings.po
@@ -23789,6 +23789,27 @@ msgctxt "#39201"
 msgid "HDR10+"
 msgstr ""
 
+#: xbmc/dialogs/GUIDialogSubtitles.cpp
+msgctxt "#39202"
+msgid "Subtitle frame rate correction"
+msgstr ""
+
+#: xbmc/dialogs/GUIDialogSubtitles.cpp
+msgctxt "#39203"
+msgid "None"
+msgstr ""
+
+#: xbmc/dialogs/GUIDialogSubtitles.cpp
+msgctxt "#39204"
+msgid "24 to 25 fps"
+msgstr ""
+
+#: xbmc/dialogs/GUIDialogSubtitles.cpp
+msgctxt "#39205"
+msgid "25 to 24 fps"
+msgstr ""
+
+
 # 40000 to 40800 are reserved for Video Versions feature
 
 #. Generic video versions label (plural)
