Simplify (esp usage) for the only practically relevant 24 vs 25 fps case

--- a/addons/resource.language.en_gb/resources/strings.po
+++ b/addons/resource.language.en_gb/resources/strings.po
@@ -23791,22 +23791,7 @@ msgstr ""
 
 #: xbmc/dialogs/GUIDialogSubtitles.cpp
 msgctxt "#39202"
-msgid "Subtitle frame rate correction"
-msgstr ""
-
-#: xbmc/dialogs/GUIDialogSubtitles.cpp
-msgctxt "#39203"
-msgid "None"
-msgstr ""
-
-#: xbmc/dialogs/GUIDialogSubtitles.cpp
-msgctxt "#39204"
-msgid "24 to 25 fps"
-msgstr ""
-
-#: xbmc/dialogs/GUIDialogSubtitles.cpp
-msgctxt "#39205"
-msgid "25 to 24 fps"
+msgid "Fix 24/25 fps mismatch"
 msgstr ""
 
 
